[package]
name = "space-race"
version = "0.1.0"
edition = "2021"
authors = ["Zolstoy <zolstoy.dev@gmail.com>"]
description = "Space Race game server side"
license = "MIT"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tungstenite = "0.27.0"
futures = "0.3.31"
tokio-tungstenite = "0.27.0"
