[package]
name = "space-race"
version = "0.1.0"
edition = "2021"
authors = ["Zolstoy <zolstoy.dev@gmail.com>"]
description = "Space Race game server side"
license = "MIT"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tungstenite = "0.27.0"
futures = "0.3.31"
tokio-tungstenite = "0.27.0"
serde_json = "1.0.142"
log = "0.4.27"
env_logger = "0.11.8"
serde = {version="1.0.219", features = ["derive"]}
